--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -14,6 +14,18 @@ services:
         image: redis
         ports:
             - 6379:6379
-        command: ["redis-server", "--appendonly", "yes"]
+        command: ['redis-server', '--appendonly', 'yes']
         volumes:
             - ./redis_data:/data
+    server:
+        image: todo-backend-dev
+        build:
+            context: .
+            dockerfile: dev.Dockerfile
+        ports:
+            - 3000:3000
+        environment:
+            - REDIS_URL=redis://redis:6379
+            - MONGO_URL=mongodb://root:example@mongo:27017/the_database
+        volumes:
+            - ./:/usr/src/app
